--- a/docker-web-auto-build/Dockerfile
+++ b/docker-web-auto-build/Dockerfile
@@ -27,7 +27,7 @@ ENV BRANCH master
 ENV DEPLOY_PARAM ''
 
 # 執行sh 透過外部參數執行下載原始碼及打包 並於執行後維持啟動狀態不關閉
-CMD bash  buildCode.sh $GIT_URL $APP_NAME $BRANCH $DEPLOY_PARAM && sleep infinity
+CMD bash -x buildCode.sh $GIT_URL $APP_NAME $BRANCH $DEPLOY_PARAM && sleep infinity
 
 # docker build -t dlri093/docker-web-auto-build:latest -t dlri093/docker-web-auto-build:0.0.1 .
 # docker push dlri093/docker-web-auto-build
